# opengl-renderer

./: .gitattributes  .gitignore  CMakeLists.txt  Makefile  compile_commands.json  example  font_renderer_reference.h  impossible-soul  run
.cache/clangd/index/: camera.cpp.EC70C0909C0857D0.idx  camera.hpp.F6F84444C9BAC2D9.idx  context.c.53240DB09E55E315.idx  egl_context.c.CCC0582A0867667C.idx  egl_context.h.34840BCEC5F81AF7.idx  entity.cpp.489E55F08C8955DA.idx  fs.cpp.A3FA28E94240515C.idx  fs.hpp.BC006C6E0440AD6E.idx  glad.cpp.2E2CC74F37377FD4.idx  glad.hpp.385A5A8B115682D9.idx  glew.c.2C885C3953E30C0D.idx  glew.h.E047816D7AC38667.idx  glfw3.h.9FDDADF53649F0A0.idx  glfw_config.h.9B4DFBA7429820E6.idx  glx_context.c.9E416F9C698977AB.idx  glx_context.h.BB921A188F09F40A.idx  glxew.h.517DEF71E0A2D063.idx  image.cpp.CFF931A88581D72E.idx  image.hpp.79D0037ACB61345A.idx  init.c.6E8F204ABA400124.idx  input.c.F05F44EFA002D412.idx  internal.h.A6841D2089697707.idx  linux_joystick.c.98273896D2E5CC2C.idx  linux_joystick.h.6A76E6451F72D50D.idx  main.cpp.9657BA331B8B9707.idx  mappings.h.66931DDA2EDEA1E6.idx  monitor.c.D185A281BE755F20.idx  osmesa_context.c.664C382195371E40.idx  osmesa_context.h.6A49E47AE792CC24.idx  posix_thread.c.B19061CCD9625057.idx  posix_thread.h.EDF1682E468854FA.idx  posix_time.c.89963223A47F52A6.idx  posix_time.h.46A4F4D00A541801.idx  renderer.cpp.2204FB94B327686A.idx  renderer.hpp.D8456DD20D0508D0.idx  result.hpp.10878A49191EA2F4.idx  shader.cpp.198FDBED185F0D25.idx  shader.hpp.BD381B091208D6CC.idx  texture.cpp.56656E546BAD2093.idx  texture.hpp.ACA88369D5A6CD3A.idx  (+10 more)
assets/shaders/: light.frag  particle.frag  particle.vert  primitive.vert  sprite.frag  sprite.vert  text.frag  text.vert
assets/shaders/post_processing/: bloom.frag  bloom_blur_combined.frag  blur.vert  combined.frag  combined.vert  gaussian_blur.frag
include/glad/: CMakeLists.txt  Makefile
include/glad/src/: glad.c
include/glew-2.1.0/: CMakeLists.txt  Makefile
include/glew-2.1.0/lib/: libGLEW.so.2.1.0
include/glfw-3.3.9/: Makefile  cmake_uninstall.cmake
include/glfw-3.3.9/examples/: Makefile  boing  gears  heightmap  offscreen  particles  sharing  simple  splitview  wave
include/glfw-3.3.9/src/: Makefile
include/glfw-3.3.9/tests/: Makefile  clipboard  cursor  empty  events  (+16 more)
include/glm/: Makefile
res/shaders/: texture.frag  texture.vert
scripts/: build  build.ps1  build.py  line_count.py  prepare  prepare.ps1  prepare.py  run  run.ps1  run.py
src/: camera.cc  camera.cpp  camera.h  camera.hpp  entity.cc  entity.cpp  entity.h  example.cpp.bak  fs.cpp  fs.h  fs.hpp  glad.cpp  glad.hpp.bak  image.cpp  logger.h  main.cc  main.cpp  renderer.cpp  renderer.h  renderer.hpp  result.hpp  shader.cpp  shader.h  shader.hpp  shader_new.cpp  shader_new.hpp  sprite.cc  sprite.h  texture.cpp  texture.hpp  timer.cpp  timer.hpp  window.cc  window.h
src/collections/: generational_arena.cc  generational_arena.h  generational_pool.cc  generational_pool.h  slice.h
src/core/: file.h  logger.h  types.h
src/graphics/: parallax.h  particle_renderer.h  program.cc  program.h  renderer.h  sprite_renderer.cc  sprite_renderer.h  text_renderer.cc  text_renderer.h  texture.cc  texture.h
src/math/: algorithm.h  constants.h  matrix.cc  matrix.h  rotor.h  transform.cc  transform.h  vector.cc  vector.h
src/physics/: body.h  collision.h
src/resources/: image.cc  image.h  shader.cc  shader.h
src/sprite/: sprite.cc  sprite.h  sprite_sheet.cc  sprite_sheet.h
src/systems/: audio.cc  audio.h
(+16 files in other folders)
